# SKN30-3rd-2Team

./: .dockerignore  .env copy  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Dockerfile.demo  README.md  docker-compose.yml  justfile  pyproject.toml
.claude/: settings.json
data/: README.md
data/01_raw/: 201231_SW종사자_기간제,단시간__표준근로계약서.hwp  201231_SW종사자_표준도급계약서.hwp  221228_상용소프트웨어_공급개발구축업.hwp  221228_상용소프트웨어_유지관리업종.hwp  251221_상용소프트웨어공급개발구축업종(비밀유지계약서_통합_및_안전등_추가).hwp  251221_상용소프트웨어유지관리업종(비밀유지계약서_통합_및_안전_추가).hwp  [별지 제6호의2서식] 표준근로계약서(농업ㆍ축산업ㆍ어업 분야).hwp  붙임1_상용SW_공급구축_사업_표준계약서.hwp  붙임2_상용SW_유지관리_사업_표준계약서.hwp  붙임4_정보시스템_유지관리_사업_표준계약서.hwp
data/02_converted/: 201231_SW종사자_기간제,단시간__표준근로계약서.md  201231_SW종사자_표준도급계약서.md  221228_상용소프트웨어_공급개발구축업.md  221228_상용소프트웨어_공급개발구축업_비밀유지계약서.md  221228_상용소프트웨어_유지관리업종.md  251221_상용소프트웨어공급개발구축업종(비밀유지계약서_통합_및_안전등_추가).md  251221_상용소프트웨어유지관리업종(비밀유지계약서_통합_및_안전_추가).md  251221_상용소프트웨어유지관리업종(비밀유지계약서_통합_및_안전_추가)_약식변경계약서.md  상용소프트웨어_공급개발구축업(2022.12.28)_직접지급합의서.md
data/03_normalized/: clause_relations.json  standard_clauses.si_subcontract.2022.json  standard_clauses.si_subcontract.2025.json  standard_clauses.si_subcontract.json  standard_clauses.sm_subcontract.2022.json  standard_clauses.sm_subcontract.2025.json  standard_clauses.sm_subcontract.json  standard_clauses.sw_employment.2020.json  standard_clauses.sw_employment.json  standard_clauses.sw_freelance.2020.json  (+8 more)
demo/: README.md  streamlit_app.py
docs/: 01.mvp_기획.md  GOAL.md  SW프리랜서_표준계약서_개요.md
eval/: README.md  ablation.py  metrics.py  run_eval.py
src/: app.py  config.py
(+118 files in other folders)
